[package]
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
description = "Shim to simplify using PostGIS types with sqlx and async-graphql"
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "geox"
repository = "https://github.com/bbqsrc/geox"
version = "0.7.0"

[dependencies]
# sqlx feature
sqlx = { version = "^0.8.2", optional = true, features = ["runtime-tokio-rustls", "postgres"] }
# async-graphql feature
async-graphql = { version = "7.0", optional = true }
# serde feature
serde = { version = "1.0", features = ["derive"], optional = true }
# used for serializing and deserializing msgpack
rmp-serde = { version = "1.3", optional = true }

geo = { version = ">=0.23, <=0.29", default-features = false }
geo-types = { version = "^0.7.13", default-features = false }
geozero = { version = "0.13", optional = true, features = ["with-postgis-sqlx"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "^0.8.2", features = ["runtime-tokio-rustls", "postgres"] }

[features]
serde = [
  "dep:serde",
  "dep:rmp-serde",
  "geo/serde",
  "geo-types/serde",
]
sqlx = ["dep:sqlx", "geozero"]
